--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -1,2 +1,6 @@
 $body-bg: rgb(255, 255, 255);
 @import "node_modules/bootstrap/scss/bootstrap";
+
+.active:active {
+    transform: translate(3px, 3px);
+}
